--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="CCQ Digital">
 
   <link rel='shortcut icon' type='image/x-icon' href='img/icon.ico' />
-  <title>CCQ Image Cropper</title>
+  <title>Image Cropper</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <!--<link rel="stylesheet" href="css/bootstrap.min.css">
