--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,8 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="javascript:window.location.reload();">Cropper</a>
                 <a class="navbar-brand helpButton">Help</a>
-                <a class="navbar-brand newSizeButton">Edit Sizes</a>
+                <a class="navbar-brand newSizeButton">Sizes</a>
+                <a class="navbar-brand newBrandingButton">Branding Options</a>
             </div>
         </div>
     </header>
@@ -56,7 +57,7 @@
     <div class="container sizes">
         <form id="options">
             <h2>Branding</h2>
-            <p class="brandingInstructions sizeInstructions">Please select any of the following branding to add to your image. <strong>You can only select one.</strong></p>
+            <p class="brandingInstructions">Please select any of the following branding to add to your image. <strong>You can only select one.</strong></p>
 
         </form>
     </div>
@@ -216,6 +217,47 @@
                             </div>
                             <div class="modal-footer">
                                 <button id="submitSizes" type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.sizes modal -->
+
+                <!-- Show upload sizes in modal -->
+                <div class="modal fade docs-cropped" id="brandModal" aria-hidden="true" role="dialog" tabindex="-1">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                <h4 class="modal-title" id="getCroppedCanvasTitle">Edit Branding Options</h4>
+                            </div>
+                            <div class="modal-body help-body">
+                                <h1>Hi There!</h1>
+
+                                <p>Add your branding options here in the following format</p>
+
+                                <pre>
+{
+    "BrandOne": {
+        "name": "Brand One",
+        "location": "https://goo.gl/2KjKu9",
+        "number": "brandingOne",
+        "description":"Branding option"
+    },
+    "BrandTwo" : {
+        "name": "Brand Two",
+        "location" : "https://goo.gl/keL3C9",
+        "number" : "brandingOne",
+        "description" : "Branding Option"
+    }
+}
+                                </pre>
+
+                                <textarea id="brandsValue" rows="6" cols="60"></textarea>
+
+                            </div>
+                            <div class="modal-footer">
+                                <button id="submitBrands" type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                             </div>
                         </div>
                     </div>
