--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                 <a class="navbar-brand" href="javascript:window.location.reload();">Cropper</a>
                 <a class="navbar-brand helpButton">Help</a>
                 <a class="navbar-brand newSizeButton">Sizes</a>
-                <a class="navbar-brand newBrandingButton">Branding Options</a>
+                <a class="navbar-brand newBrandingButton">Branding</a>
             </div>
         </div>
     </header>
