disabling branding due to CORS issues

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
                 <a class="navbar-brand" href="javascript:window.location.reload();">Cropper</a>
                 <a class="navbar-brand helpButton">Help</a>
                 <a class="navbar-brand newSizeButton">Sizes</a>
-                <a class="navbar-brand newBrandingButton">Branding</a>
+                <!-- <a class="navbar-brand newBrandingButton">Branding</a> -->
             </div>
         </div>
     </header>
@@ -54,7 +54,7 @@
     </div>
 
     <!-- Cropper Branding -->
-    <div class="container sizes">
+    <!-- <div class="container sizes">
         <form id="options">
             <h2>Branding</h2>
             <p class="brandingInstructions">Please select any of the following branding to add to your image.
@@ -62,11 +62,11 @@
             </p>
 
         </form>
-    </div>
+    </div> 
 
     <div class="container">
         <hr>
-    </div>
+    </div> -->
 
     <!-- Upload -->
     <div class="container">
